# model_parallelism

./: LICENSE  README.md  requirements.txt  setup.cfg
src/model_paralellism.egg-info/: PKG-INFO  SOURCES.txt
src/model_parallelism/: __init__.py
src/model_parallelism.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
