[metadata]
name = model_parallelism
version = 0.1.0
author = Samuel Stevens
author_email = samuel.robert.stevens@gmail.com
description = A simple wrapper around DeepSpeed for model parallelism.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samuelstevens/model_parallelism
project_urls =
    Bug Tracker = https://github.com/samuelstevens/model_parallelism/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
